<resources>
    <string name="app_name">Drug Interaction</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="register">Register</string>
    <string name="dufyp">Did you forget your password?</string>
    <string name="tap_to_add_photo">Tap to on the camera to add photo</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="re_enter_password">Re-enter password</string>
    <string name="submit">Submit</string>
    <string name="age">Age</string>
    <string name="patient">Patient</string>
    <string name="doctor">Doctor</string>
    <string name="status">Status</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="phone">Phone Number</string>
    <string name="my_profile">My profile</string>
    <string name="my_patients">My patients</string>
    <string name="my_doctors">My doctors</string>
    <string name="my_diseases">My diseases</string>
    <string name="logoutMenu">Logout</string>
    <string name="send_mail">Send email</string>
    <string name="enter_mail">Insert email address</string>
    <string name="drug_search">Drug Search</string>
    <string name="search_here">Search here</string>
    <string name="name_header">Drug Name</string>
    <string name="description_header">Drug Description</string>
    <string name="category_header">Drug Category</string>
    <string name="food_interact_header">Food Interaction</string>
    <string name="drug_interact_header">Interaction between the two drugs</string>
    <string name="open_drawer">Open</string>
    <string name="close_drawer">Close</string>
    <string name="please_click_information_to_update">Please click information to update!</string>
    <string name="update">Update</string>
    <string name="ent_new_value">Enter new value</string>
    <string name="ent_new_value_gender">Enter M (male), F (female), O (other)</string>
    <string name="edit_name">Edit name</string>
    <string name="edit_surname">Edit surname</string>
    <string name="edit_gender">Edit gender</string>
    <string name="edit_age">Edit age</string>
    <string name="edit_phone">Edit phone number</string>
    <string name="edit_email">Edit email address</string>
    <string name="home">Home</string>
    <string name="addPatient">Add patient\'s email</string>
    <string name="addDisease">Add disease\'s name</string>
    <string name="diseases">Diseases</string>
    <string name="disease_name">Disease name</string>
    <string name="selectDisease">Select disease</string>
    <string name="selectPatient">Select patient</string>
</resources>
