<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/home"
        android:icon="@drawable/home"
        android:title="@string/home"
        android:visible="false" />

    <item
        android:id="@+id/userDetails"
        android:icon="@drawable/icons8_writer_male_24"
        android:title="@string/my_profile"
        android:visible="true" />

    <item
        android:id="@+id/patients"
        android:icon="@drawable/ic_people_black_24dp"
        android:title="@string/my_patients"
        android:visible="true" />

    <item
        android:id="@+id/doctors"
        android:icon="@drawable/doctor"
        android:title="@string/my_doctors"
        android:visible="false" />

    <item
        android:id="@+id/diseases"
        android:icon="@drawable/icons8_virus_24"
        android:title="@string/my_diseases"
        android:visible="true" />

    <item
        android:id="@+id/action_logout"
        android:icon="@drawable/ic_power_settings_new_black_24dp"
        android:title="@string/logoutMenu" />
</menu>