<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:background="#FFF"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tapToAddPhotoText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="18dp"
                android:text="@string/tap_to_add_photo"
                android:textAlignment="center"
                android:textSize="18sp" />


            <ImageView
                android:id="@+id/imageViewCamera"
                android:layout_width="131dp"
                android:layout_height="108dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/icon_camera" />
        </LinearLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:layout_marginTop="10dp"
                android:hint="@string/name"
                android:id="@+id/nameUser" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:layout_marginTop="10dp"
                android:hint="@string/surname"
                android:id="@+id/surnameUser" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/ageUser"
                android:layout_width="86dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/age"
                android:inputType="textEmailAddress" />

        </android.support.design.widget.TextInputLayout>

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/genderRadio">

            <TextView
                android:id="@+id/userGender"
                android:layout_width="119dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="textPersonName"
                android:text="@string/gender"
                tools:ignore="TextFields" />

            <RadioButton
                android:id="@+id/radio_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioGenderClicked"
                android:text="@string/male"
                android:textColor="#5f98a6" />

            <RadioButton
                android:id="@+id/radio_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioGenderClicked"
                android:text="@string/female"
                android:textColor="#5f98a6" />

            <RadioButton
                android:id="@+id/radio_other"
                android:layout_width="138dp"
                android:layout_height="wrap_content"
                android:onClick="onRadioGenderClicked"
                android:text="@string/other"
                android:textColor="#5f98a6" />
        </RadioGroup>

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/statusRadio">

            <TextView
                android:id="@+id/userStatus"
                android:layout_width="119dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="textPersonName"
                android:text="@string/status"
                tools:ignore="TextFields" />

            <RadioButton
                android:id="@+id/radio_doctor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioStatusClicked"
                android:text="@string/doctor"
                android:textColor="#5f98a6" />

            <RadioButton
                android:id="@+id/radio_patient"
                android:layout_width="204dp"
                android:layout_height="wrap_content"
                android:onClick="onRadioStatusClicked"
                android:text="@string/patient"
                android:textColor="#5f98a6" />
        </RadioGroup>

        <android.support.design.widget.TextInputLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:layout_marginTop="10dp"
                android:hint="@string/phone"
                android:id="@+id/phoneText" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:layout_marginTop="10dp"
                android:hint="@string/e_mail"
                android:id="@+id/emailText" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:layout_marginTop="10dp"
                android:id="@+id/passwordText"
                android:hint="@string/password" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <EditText
                android:id="@+id/passwordText2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/re_enter_password"
                android:inputType="textPassword" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/nextButton"
            android:layout_width="115dp"
            android:layout_height="31dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/round_shape_button"
            android:text="@string/submit"
            android:textColor="#5f98a6"
            android:textSize="15sp" />
    </LinearLayout>
</ScrollView>