<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="130dp"
        app:srcCompat="@drawable/druglogo"
        android:layout_marginBottom="20dp" />


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/loginEmailText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/e_mail"
            android:inputType="textEmailAddress" />

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/loginPasswordText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword" />

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/loginButton"
            android:layout_width="115dp"
            android:layout_height="31dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/round_shape_button"
            android:text="@string/login"
            android:textColor="#5f98a6"
            android:textSize="15sp" />

        <Button
            android:id="@+id/registerPageButton"
            android:layout_width="115dp"
            android:layout_height="31dp"
            android:layout_marginStart="60dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/round_shape_button"
            android:text="@string/register"
            android:textColor="#5f98a6"
            android:textSize="15sp" />

    </LinearLayout>


    <Button
        android:id="@+id/forgotPassButton"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:background="#FFFF"
        android:text="@string/forgot_password"
        android:textColor="#999999"
        android:textSize="12sp"
        android:layout_width="155dp"
        android:layout_height="31dp"
        android:color="#FFFFFF" />

    <TextView
        android:id="@+id/userStatus1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone" />

</LinearLayout>